[gd_scene load_steps=5 format=2]

[ext_resource path="res://StartScreen/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Rabbid-Highway-Sign.ttf"

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = SubResource( 1 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameName" type="Label" parent="VBC"]
margin_right = 1920.0
margin_bottom = 610.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = SubResource( 2 )
text = "BacteriaWars"
align = 1
valign = 1

[node name="Info" type="Label" parent="VBC"]
margin_top = 614.0
margin_right = 1920.0
margin_bottom = 664.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
custom_fonts/font = ExtResource( 2 )
text = "Last Bacteria standing."
align = 1
valign = 1

[node name="HBC" type="HBoxContainer" parent="VBC"]
margin_top = 668.0
margin_right = 1920.0
margin_bottom = 871.0
size_flags_vertical = 3

[node name="Player1" type="Label" parent="VBC/HBC"]
margin_right = 958.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Please Press Start"
align = 1
valign = 1

[node name="Player2" type="Label" parent="VBC/HBC"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Please Press Start"
align = 1
valign = 1

[node name="HBC2" type="HBoxContainer" parent="VBC"]
margin_top = 875.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3

[node name="Player3" type="Label" parent="VBC/HBC2"]
margin_right = 958.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Please Press Start"
align = 1
valign = 1

[node name="Player4" type="Label" parent="VBC/HBC2"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Please Press Start"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
